* Added connection error alert in Sharing screen.
* Increased padding at the bottom of the share extension's editor, to make typing a longer post a bit more comfortable.